[tool.poetry]
name = "checkbox-sdk"
version = "0.1.41"
description = "Ukraine checkbox api python sdk"
authors = ["Roman Telezhynskyi <dismine@gmail.com>"]
maintainers = ["Roman Telezhynskyi <dismine@gmail.com>"]
repository = "https://github.com/dismine/checkbox-sdk"
readme = "README.md"
license = "MIT"
packages = [{include = "checkbox_sdk"}]
keywords = ["python", "sdk"]

[tool.poetry.dependencies]
python = "^3.8"
PyJWT = "^1.7.1"
httpx = "0.27.0"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
autoflake = "^1.4"
ipython = "^7.17.0"
pytz = "^2023.3"

[tool.black]
line-length = 119
target-version = ['py310', 'py311']
exclude = '''
(
    \.eggs
  | \.git
  | build
  | dist
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 119
known_third_party = ["httpx", "jwt", "httpcore"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
